完善Controller方法调用流程